fixed dropdown alignment on mac

--- a/web/style.css
+++ b/web/style.css
@@ -122,7 +122,8 @@ p {
   font-size: 18px;
 }
 
-.prefix {
+.prefix,
+.prefix2 {
   padding: 8px 8px 8px 16px;
   display: inline-block;
   background-color: black;
